# forecast

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_EDA.ipynb  02_demand_analysis.ipynb  testing.ipynb
querys/: sales_query_template.sql
sandbox/: df_sample.xlsx  weekly_sale_sample.xlsx  ~$df_sample.xlsx
src/analysis/: demand_summary.py
src/config/: bigquery_config.py  dir_config.py  seasons_to_download.py
src/etl/: data_extraction.py  prepare_data.py  transform_data.py
src/utils/: download_data.py  read_data.py
